--- a/Day_50/next-auth/package.json
+++ b/Day_50/next-auth/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^4.24.5",
     "next-intl": "^3.3.2",
     "next-themes": "^0.2.1",
+    "polished": "^4.2.2",
     "primeicons": "^6.0.1",
     "react": "^18",
     "react-dom": "^18",
