--- a/Day_50/next-auth/package.json
+++ b/Day_50/next-auth/package.json
@@ -13,6 +13,7 @@
     "cookies-next": "^4.1.0",
     "framer-motion": "^10.16.16",
     "i18next": "^23.7.9",
+    "js-cookie": "^3.0.5",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-intl": "^3.3.2",
