--- a/Day_50/next-auth/.env
+++ b/Day_50/next-auth/.env
@@ -1,6 +1,7 @@
-NEXTAUTH_SECRET=tOQUne9GSo65cRkCQ8JtO3jBNsEZqsmo1loBSj83eUA=
+# NEXTAUTH_SECRET=tOQUne9GSo65cRkCQ8JtO3jBNsEZqsmo1loBSj83eUA=
 GITHUB_SECRET=4c1ae50724b005ab9c60e3124c82f6d29f10b9db
 GITHUB_ID=01e59f1eede1bc56e65e
 GOOGLE_CLIENT_ID=897773701012-kbg1savpdhjkp0l3fdtlksdhad3rbh81.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=https://next-auth-lac-nine.vercel.app
+NEXTAUTH_SECRET=85843c9aef3584002dc5c65b0920e3c8
