--- a/FrontEnd_Project/mindmap/package.json
+++ b/FrontEnd_Project/mindmap/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "polished": "^4.2.2",
     "primeicons": "^6.0.1",
     "react": "^18",
     "react-dom": "^18",
