--- a/Day_56/Auth/package.json
+++ b/Day_56/Auth/package.json
@@ -10,7 +10,8 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
+    "device-detector-js": "^3.0.3",
+    "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
