--- a/Day_60/Google/package.json
+++ b/Day_60/Google/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "node04",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,13 +13,14 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "device-detector-js": "^3.0.3",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
+    "md5": "^2.3.0",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
@@ -28,11 +29,9 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
-    "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.0",
     "sequelize-cli": "^6.6.2"
   }
 }
