--- a/Social_Login_Api/frontend/jsconfig.json
+++ b/Social_Login_Api/frontend/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@scss/*": ["./src/assets/scss/*"],
+      "@imgs/*": ["./src/assets/imgs/*"]
     }
   }
 }
